# sts2-ai

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .vulture-whitelist.py  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cultists_normal_overview.md  pyproject.toml  requirements-dev.txt
.claude/: CLAUDE.md
engine/cpp/: CMakeLists.txt
engine/cpp/docs/: 01-decisions-log.md  q2-architecture.md
engine/cpp/scenarios/: cultists-normal.json  louse-progenitor-normal.json  nibbits-weak-low-hp.json  nibbits-weak.json
engine/cpp/src/: CMakeLists.txt  main.cc
engine/cpp/src/ai/: chance.cc  probability.cc  recommend.cc  search.cc  state.cc  transition.cc  zobrist.cc
engine/cpp/src/app/: args.cc  prompts.cc
engine/cpp/src/game/: combat.cc  damage.cc  encounter_registry.cc  enemies.cc  hand.cc  monster_moves.cc
engine/cpp/src/input/: input.cc
engine/cpp/src/render/: ai_recommendation.cc  bar.cc  console.cc  render.cc
engine/cpp/tests/: CMakeLists.txt  test_smoke.cc
engine/cpp/tests/ai/: test_chance.cc  test_helpers.h  test_move_effect_dispatch_parity.cc  test_probability.cc  test_recommend_re_derivation.cc  test_search_known.cc  test_state.cc  test_state_parity.cc  test_transition.cc  test_tt_cap.cc  test_zobrist.cc
engine/cpp/tests/app/: test_args.cc  test_scenario.cc
engine/cpp/tests/game/: test_card_effects.cc  test_cards.cc  test_combat.cc  test_damage.cc  test_damage_formula.cc  test_encounter_registry.cc  test_enemies.cc  test_hand.cc  test_helpers.h  test_monster_moves_table.cc  test_move_calc.cc  test_powers.cc  test_stat.cc  test_turn_calc.cc
engine/cpp/tests/oracle/: CMakeLists.txt  adapter_fixtures.h  envelope_test_helpers.h  test_adapter_facade.cc  test_adapter_reject.cc  test_adapter_roundtrip.cc  test_agreement_row.cc  test_agreement_schema_freeze.cc  test_cultists_projection.cc  test_cultists_search_pins.cc  test_envelope.cc  test_gremlin_merc_projection.cc  test_gremlin_merc_search_pins.cc  test_louse_progenitor_projection.cc  test_louse_progenitor_search_pins.cc  test_manifest.cc  test_nibbits_normal_projection.cc  test_nibbits_normal_search_pins.cc  test_nibbits_weak_projection.cc  test_nibbits_weak_search_pins.cc  test_pin_row.cc  test_registry_sha.cc  test_sink.cc  test_small_slimes_projection.cc  test_small_slimes_search_pins.cc  test_state_blob.cc  test_verify_server.cc
engine/cpp/tests/render/: test_ai_recommendation.cc  test_render.cc  test_render_internal.cc
engine/cpp/tests/seeds/: cultist_zobrist_pin.h  dump_cultist_zobrist_key.cc  expected_values.h
engine/cpp/tools/emit-sample-rows/: CMakeLists.txt  main.cc
engine/cpp/tools/oracle-golden-emit/: CMakeLists.txt  main.cc
engine/cpp/tools/oracle-verify-server/: CMakeLists.txt  main.cc
engine/cpp/tools/seed-pinner/: CMakeLists.txt  README.md  pin_seeds.cc
src/: CMakeLists.txt  main.cc  main.cpp
src/ai/: probability.cc  recommend.cc  search.cc  state.cc  transition.cc
src/app/: Args.cpp  Args.h  Prompts.cpp  Prompts.h  args.cc  prompts.cc
src/game/: Card.h  Cards.cpp  Cards.h  Combat.cpp  Combat.h  Damage.cpp  Damage.h  Enemies.cpp  Enemies.h  Enemy.h  Player.h  Power.h  Powers.cpp  Powers.h  Rng.cpp  Rng.h  Types.h  Vitals.h  cards.cc  combat.cc  damage.cc  deck.cc  enemies.cc  hand.cc  powers.cc  rng.cc
src/input/: Input.cpp  Input.h  Input_internal.h  input.cc  input_internal.h
src/render/: Bar.cpp  Bar.h  Console.cpp  Console.h  Glyphs.h  Render.cpp  Render.h  Render_internal.h  ai_recommendation.cc  bar.cc  console.cc  render.cc  render_internal.h
tests/: CMakeLists.txt  main.cpp  test_cards.cpp  test_combat.cpp  test_damage.cpp  test_enemies.cpp  test_helpers.h  test_input.cpp  test_main.cpp  test_powers.cpp  test_render.cpp  test_rng.cpp  test_runner.cpp  test_runner.h  test_smoke.cc  test_smoke.cpp  test_types.cpp
tests/ai/: test_helpers.h  test_outcome_calibration.cc  test_probability.cc  test_recommend_legality.cc  test_search_known.cc  test_state.cc  test_state_parity.cc  test_transition.cc
tests/app/: test_args.cc  test_args.cpp  test_prompts.cc  test_prompts.cpp
tests/game/: test_card_effects.cc  test_cards.cc  test_cards.cpp  test_combat.cc  test_combat.cpp  test_damage.cc  test_damage.cpp  test_deck.cc  test_enemies.cc  test_enemies.cpp  test_hand.cc  test_helpers.h  test_index_types.cc  test_move_calc.cc  test_powers.cc  test_powers.cpp  test_rng.cc  test_rng.cpp  test_stat.cc
tests/input/: test_input.cc  test_input.cpp  test_input_internal.cc  test_input_internal.cpp
tests/render/: test_ai_recommendation.cc  test_bar.cc  test_bar.cpp  test_console.cc  test_console.cpp  test_render.cc  test_render.cpp  test_render_internal.cc  test_render_internal.cpp
tests/schema/: test_compatibility.py
tests/seeds/: expected_values.h
tests/services/: smoke_services.py
tools/seed-pinner/: CMakeLists.txt  README.md  pin_seeds.cc  pin_seeds.cpp
tools/upstream-sync/: README.md  pyproject.toml
tools/upstream-sync/docs/: decompile-determinism-report.md  port-decision-empty.md  port-decision-template.md  wave-6-sigsegv-spike-report.md
tools/upstream-sync/scripts/: cron-sync-check.sh
tools/upstream-sync/src/upstream_sync/: artifact_filters.py  change_type.py  cli.py  config.py  content_allowlist.py  correlate.py  diff_analyze.py  entity_extract.py  extract.py  git_ops.py  patch_notes.py  port_decisions.py  prompt_generator.py  steam_meta.py  version_args.py
tools/upstream-sync/tests/: test_artifact_filters.py  test_change_type.py  test_cli.py  test_config.py  test_content_allowlist.py  test_correlate.py  test_diff_analyze.py  test_entity_extract.py  test_extract.py  test_git_ops.py  test_patch_notes.py  test_port_decisions.py  test_prompt_generator.py  test_steam_meta.py  test_version_args.py
tools/upstream-sync/tests/fixtures/: appmanifest_2868840.sample.acf  diff_name_status.sample.txt  golden_port_decisions.empty.md  golden_port_decisions.smoke.md  mini_port_decisions.json  patch_notes.sample.json  sample_card.cs
tools/upstream-sync/tests/snapshots/: generic_Strike_Silent.txt  monster_LeafSlime.txt
(+1420 files in other folders)
