[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upstream-sync"
version = "0.1.0"
description = "Detect new STS2 patches, re-extract via GDRE, version, diff, generate port-decision docs."
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
